# learn_opengl

./: .gitignore  CMakeLists.txt  main.cpp  shaders.qrc
camera/include/: camera.h
camera/src/: camera.cpp
glwindow/: glwindow.cpp  glwindow.h
material/include/: material.h
material/src/: material.cpp
renderer/: design.md
renderer/include/: renderer.h
renderer/src/: renderer.cpp
scenewindow/: scenewindow.cpp  scenewindow.h
shaderprogram/include/: shaderprogram.h
shaderprogram/src/: shaderprogram.cpp
shaders/: fragmentshader.frag  throughColorFragmentshader.frag  vertexshader.vert
shape/include/: shapeGenerator.h  shapedata.h  vertex.h
shape/src/: shapeGenerator.cpp
texture/include/: texture2d.h
texture/src/: texture2d.cpp
tools/: random.cpp
